[package]
name = "mcbans"
version = "0.1.0"
authors = ["Zoey Mertes <zmertes@purdue.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto="^0.2"
rayon="^1.5"
clap = "2.33.3"
cidr-utils = "0.5.0"

[profile.release]
opt-level = 3
panic = 'abort'
lto = true
